--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0"
+    "@craco/craco": "^7.1.0",
+    "gh-pages": "^6.3.0",
+    "html-minimizer-webpack-plugin": "^5.0.0",
+    "react-app-rewired": "^2.2.1"
   }
 }
